# PaddleOCRFastAPI-mod

./: .gitignore  Dockerfile  README.md  README_CN.md  config.py  database.py  docker-compose.yml  limiter.py  main.py  pyproject.toml
models/: OCRModel.py  TaskModel.py
routers/: ocr.py  tasks.py
utils/: ocr_worker.py
